# animagine-reflex-ui

./: .gitignore  README.md  install_requirements.sh  pyproject.toml  rxconfig.py  shell.nix
animeXL/: animeXL.py
animeXL/img/: main.py
animeXL/ui/: gender_char_seri.py  general_tag.py  negative_tag.py  quality.py  rating_selector.py  resolution.py  scale_step.py
